<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="setting_lable">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="main_lable">Main</string>
    <string name="image_replacement">Image Cracked!</string>
    <string name="image_logo_descripter">Lost+Found Logo</string>
    <string name="main_setting">설정</string>
    <string name="main_changeEmail">등록된 이메일 변경</string>
    <string name="main_changePassword">비밀번호 변경</string>
    <string name="main_support">도움말</string>
    <string name="setting_siren">경고음 출력 사용</string>
    <string name="setting_gps">위치 추적 사용</string>
    <string name="setting_smsShoot">전면 카메라 사용</string>
    <string name="setting_phoneLock">휴대폰 잠금 사용</string>
    <string name="setting_failShoot">잠금해제 실패 시 전면촬영</string>
    <string name="setting_contactBackup">주소록 백업 사용</string>
    <string name="setting_warningMsg">경고음 출력 메시지 설정</string>
    <string name="setting_lockMessage">휴대폰 잠금시 출력될 메시지 설정</string>
    <string name="setting_saveSetting">설정 완료</string>
    <string name="emailchange_lable">Email Change</string>
    <string name="emailchange_old">현재 이메일을 입력하세요</string>
    <string name="emailchange_new">변경할 이메일을 입력하세요</string>
    <string name="emailchange_finish">확인</string>
    <string name="passwordchange_lable">Password Change</string>
    <string name="passwordchange_old">현재 비밀번호를 입력하세요</string>
    <string name="passwordchange_new">변경할 비밀번호를 입력하세요</string>
    <string name="passwordchange_finish">변경 확인</string>
    <string name="signup_lable">Sign Up</string>
    <string name="signup_agreement_title">개인정보 저장 관련 약관</string>
    <string name="signup_agreement">약관 정보가 여기에 들어갑니다.</string>
    <string name="signup_agreement_check">동의</string>
    <string name="signup_password">비밀번호(숫자 4자리)</string>
    <string name="signup_password_hint">4자리의 숫자를 입력해주세요</string>
    <string name="signup_birth">생년월일</string>
    <string name="signup_mail">이메일 주소</string>
    <string name="signup_mail_hint">이메일 형식에 맞춰 입력해주세요</string>
    <string name="signup_complete">가입</string>
    <string name="title_activity_startup">Lost+Found</string>
    <string name="support_lable">Support</string>
    <string name="siren_message1">이 핸드폰은 주인이 애타게 기다리고 있는\n분실 폰입니다.</string>
    <string name="siren_message2">아래의 번호로 꼭 전화해주세요~</string>
    <string name="siren_lable">Siren Activity</string>
    <string name="title_activity_set_siren_message">사이렌 설정 화면</string>
    <string name="setsirenmessage_hint1">핸드폰을 분실하셨을 때, @경보음 + 비밀번호를 보내주시면, 이곳에서 등록하신 번호로 전화달라는 음성과 메시지가 표시됩니다.</string>
    <string name="setsirenmessage_hint2">비상 연락처를 입력해주세요.</string>
    <string name="setsirenmessage_hint3">-</string>
    <string name="setsirenmessage_button1">저장 후 미리보기(소리 최대로 커짐!)</string>
    <string name="setsirenmessage_button2">저장 후 이전화면으로 이동</string>
    <string name="setsirenmessage_using">사이렌 기능 사용</string>
    <string name="setsirenmessage_unusing">사이렌 기능 사용안함</string>
    <string name="contacts_label">주소록 백업 설정 화면</string>
    <string name="contacts_hint">핸드폰을 분실하셨을 때, @주소록 + 비밀번호를 보내주시면 가입시 입력한 메일주소로 주소록 정보가 백업된 파일을 보내드립니다.</string>
    <string name="contacts_hint2">아니면, 지금 이 화면에서 미리 파일을 백업하여 핸드폰에 저장해 놓을 수도 있습니다.</string>
    <string name="contacts_backup">주소록 미리 백업하기</string>
    <string name="contacts_restore">백업한 파일로 주소록 복원하기</string>
    <string name="contacts_using">주소록 백업기능 사용</string>
    <string name="contacts_unusing">주소록 백업기능 사용안함</string>
    <string name="locationsetting_using">핸드폰 위치추적 기능 사용</string>
    <string name="title_activity_location_setting">GPS 설정화면</string>
    <string name="locationsetting_hint">핸드폰을 분실하셨을 때, @위치 + 비밀번호를 보내주시면 메세지를 보내신 핸드폰으로 핸드폰의 현재 위치를 찍어서 보내드립니다.</string>
    <string name="locationsetting_hint2">핸드폰 위치 미리보기 기능을 통해, 현재 위치가 어떻게 출력되는지 확인하실 수도 있습니다.</string>
    <string name="locationsetting_preview">핸드폰 위치 미리보기</string>
    <string name="locationsetting_using">핸드폰 위치추적 기능 사용</string>
    <string name="locationsetting_unusing">핸드폰 위치추적 기능 사용안함</string>
    <string name="lockScreen_Message1">이 핸드폰은 주인이 애타게 기다리고 있는\n분실 폰입니다.</string>
    <string name="lockScreen_Message2">아래의 번호로 꼭 전화해주세요~</string>
    <string name="settings_password">Enter Password:</string>
    <string name="lockScreen">화면 잠금</string>
    <string name="title_activity_set_lock">화면잠금 설정</string>
    <string name="setlock_hint">핸드폰을 분실하셨을 때, @잠금 + 비밀번호를 보내주시면 핸드폰을 사용하지 못하도록 잠궈버립니다.</string>
    <string name="setlock_hint2">화면 잠금 상태에서 비밀번호를 입력하시면 잠금이 헤제됩니다.</string>
    <string name="setlock_using">화면 잠금기능 사용</string>
    <string name="setlock_unusing">화면 잠금기능 사용안함</string>
    <string name="title_activity_set_lock_fail">화면잠금 실패 설정</string>
    <string name="setlockfail_hint">핸드폰을 분실하여, 화면 잠금 기능으로 화면을 잠구었을 때, 상대방이 비밀번호를 무심결에 잘못 입력 한 경우, 전면 카메라로 사진을 찍어 메일로 보내드립니다.</string>
    <string name="setlockfail_hint2">핸드폰도 찾고, 도둑도 잡고 :)</string>
    <string name="setlockfail_using">잠금 해제 실패시 전면촬영 사용</string>
    <string name="setlockfail_unusing">잠금 해제 실패시 전면촬영 사용안함</string>
    <string name="title_activity_set_camera">카메라 환경설정</string>
        <string name="camera_hint">핸드폰을 분실하셨을 때, @사진 + 비밀번호를 보내주시면, 전면 카메라로 사진을 찍어 메일로 보내드립니다.</string>
    <string name="camera_hint2">주위 환경으로 찾을 수도 있고, 범인을 찾을수도 있겠죠?</string>
    <string name="camera_using">전면촬영 사용</string>
    <string name="camera_unusing">전면촬영 사용안함</string>

</resources>